@@ -1,0 +1,3 @@
+Test for bug 26570. There should be two green boxes on this page.
+
+PASS
