@@ -1,3 +1,13 @@
+2011-07-26  Noel Gordon  <noel.gordon@gmail.com>
+
+        Add regression test for :empty { display: none }
+        https://bugs.webkit.org/show_bug.cgi?id=26570
+
+        Reviewed by Alexey Proskuryakov.
+
+        * fast/css/pseudo-empty-display-none-expected.txt: Added.
+        * fast/css/pseudo-empty-display-none.html: Added.
+
 2011-07-25  Dan Bernstein  <mitz@apple.com>
 
         Updated three more tests that relied on fonts loading synchronously.
